<?xml version="1.0"?>
<package>
  <name>servicebot</name>
  <version>0.0.0</version>
  <description>The servicebot package</description>

  <maintainer email="47stevo@gmail.com">Steven G</maintainer>
  <maintainer email="htsai51@terpmail.umd.edu">Jane Tsai</maintainer>

  <license>MIT</license>

  <url type="website">https://github.com/StevieG47/Service-Robot</url>

  <author email="47stevo@gmail.com">Steven G</author>
  <author email="htsai51@terpmail.umd.edu">Jane Tsai</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>actionlib</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sound_play</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
<build_depend>nav_core</build_depend>
<build_depend>sensor_msgs</build_depend>
<build_depend>cv_bridge</build_depend>
<build_depend>image_transport</build_depend>

  <run_depend>actionlib</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>move_base_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sound_play</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
 <run_depend>nav_core</run_depend>
 <run_depend>sensor_msgs</run_depend>
 <run_depend>cv_bridge</run_depend>
 <run_depend>image_transport</run_depend>

 <export>
   
	<nav_core plugin="${prefix}/relaxed_astar_planner_plugin.xml"/>

  </export>
</package>

